# youtube-comment-sentiment-analysis

./: Makefile  README.md  pyproject.toml  requirements-dev.txt
docs/: mkdocs.yml
docs/docs/: index.md
mlruns/.trash/236580624583793782/: meta.yaml
mlruns/0/: meta.yaml
mlruns/0/3f06b4ab04e24b1e8ccf2dec833eac7c/: meta.yaml
mlruns/0/79c48a612514489d994e207b63475852/: meta.yaml
mlruns/0/7f3c7a1e51cb4a8cb4c5824db4099260/: meta.yaml
mlruns/233128385656009785/: meta.yaml
mlruns/233128385656009785/1a228242646e49459a7281b9b3a6f3b2/: meta.yaml
mlruns/233128385656009785/4c3e07e4911d41f1816d8ad5a2c6e6d1/: meta.yaml
mlruns/233128385656009785/71c41fadfa4d4c8fa821d8d389f33114/: meta.yaml
mlruns/233128385656009785/8a8fbdba960c45deb75f342f6ea7930d/: meta.yaml
mlruns/233128385656009785/972f75fcf763438c94d12ebc81409336/: meta.yaml
mlruns/233128385656009785/d706f8a6423a487dbefc0eaa2a09b200/: meta.yaml
mlruns/293310681361475325/: meta.yaml
mlruns/293310681361475325/3f4efdea01e742b8ac387c8e38c311b2/: meta.yaml
mlruns/293310681361475325/5cd356408723413eb13737e722f34583/: meta.yaml
mlruns/446132809146599857/: meta.yaml
mlruns/468279134609977584/: meta.yaml
mlruns/725100858814278742/: meta.yaml
mlruns/766508419071346459/: meta.yaml
notebooks/: Baseline Model_v1.ipynb  Exp 5 XgBoost and Hyperparam Tuning.ipynb  Exp-2 TF-IDF and BoW.ipynb  Exp-3 max_features.ipynb  Exp-4 Imbalance dataset.ipynb
yt-comments/: __init__.py  dataset.py  features.py  plots.py
yt-comments/modeling/: predict.py  train.py
(+827 files in other folders)
