[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "yt-comments"
version = "0.0.1"
description = "In this Project i will make a chrome extension where i can find the sentiment for the youtube video"
authors = [
  { name = "Arya Gupta" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["yt-comments"]
include = ["pyproject.toml", "yt-comments/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["yt-comments"]
force-sort-within-sections = true

